2000-11-24  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/libta/swriteheaders.c, transports/libta/fwriteheaders.c:
	    Changed the code from "scan the input to determine future
	    space needs" to "(re)expand as more space is needed" to
	    make sure there is no discrepancy in between the two.

2000-11-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    Few hours of going over the  smtp_sync()'s smtp_nbread()
	    call, and its surroundings.  Iverted its logic, and finally
	    got simple, clean, understandable code.  ("I smell Wumpus!")

	* scheduler/mailq.c:
	    Wondered that "mailq -vv" didn't show diagnostic messages
	    along other data.  Now it does.  Plus other small tuneups
	    of the result.

	* transports/smtp/smtp.c:
	    A bit more of care on referencing 'logfile' variable.
	    Not using uninitialized one.

	* transports/mailbox/mailbox.c:
	    A trivialish  return-receipt-to  processing fixup at
	    the mailbox so that the user-supplied string is unfolded
	    into single line with spaces in places of folds (newlines).
	    (Proper fix is FULL RFC 822 scanner to pick the recipient
	     address, but perhaps not...)

	* transports/smtp/smtp.c:
	    Blocking read waiting was done with busy-loop, and
	    if the connection *stays* in ESTABLISHED state, but
	    never timeouts --> busy spin goes on, and on...

	* scheduler/msgerror.c:
	    Don't try to be clever with cfp->mid field reuse at
	    the slurp()ed instance -- use incoming 'cfpi->mid'.

2000-11-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    Meaningless variable name changes (and some revoked changes
	    which got committed into CVS - and now removed.)

	* transports/libta/fwriteheaders.c, transports/libta/swriteheaders.c:
	    One subtle bug in BDAT buffering mode left in line-ending
	    newline handling --> surprising crashes seen.

	* transports/libta/mimeheaders.c: